--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=callApi
+
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=call_api
+server.port=8080
